@@ -1,13 +1,13 @@
 
 
-<h1>LilyPond on MS Windows</h1>
+<h1>LilyPond on Microsoft Windows</h1>
 
 
 <a name="installing"></a>  
 <h2>1. Installation</h2>
 
 
-<img src=@IMAGES@cygwin-shot.png align=right> 
+<img src="@IMAGES@cygwin-shot.png" align="right">
 
 <ul>
 <li>
@@ -33,10 +33,10 @@ of free disk space.
 
 </ul>
 
-If you are not 100% sure of what you're doing, then don't change the
-defaults. <B>Don't</b> change the default install directory
+If you are not 100% sure of what you are doing, then do not change the
+defaults. <B>Do not</b> change the default install directory
 (<code>c:/cygwin</code>), and
-<b>don't</b> change the default text type (UNIX).
+<b>do not</b> change the default text type (UNIX).
 
 
 <p>
@@ -83,16 +83,19 @@ description of your problem.
 <h4>Windows 98</h4>
 
 On Windows <b>95, 98 and ME</b> there are problems with the Cygwin
-Python package, which cause may hamper the operation of LilyPond.
-Unfortunately, these problems are outside control of the LilyPond
-development team.  Windows NT, 2000 and XP is not affected.
+Python package, which cause may hamper the operation of LilyPond
+(see <a
+href="http://www.cygwin.com/ml/cygwin/2004-06/msg00956.html">python
+fails testsuite</a>).  Unfortunately, these problems are outside
+control of the LilyPond development team.  Windows NT, 2000 and XP are
+not affected.
 
 <p>
 
 <h4>But I have no <tt>test.log</tt></h4>
 <p>
-Then you did not install the LilyPond package correctly. Go back to <a
-href="#installing">1. Installation</a> and double-check that you've
+The LilyPond package did not install correctly.  Please go back to <a
+href="#installing">1. Installation</a> and double-check that you have
 followed the procedure correctly.  If in doubt, send mail to <a
 href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a>
 
