@@ -1,5 +1,8 @@
 2004-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/download/windows.html: Do not blame the user.  Do not use
+	don't etc.
+
 	* site/index.html: It's September already.
 
 2004-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>
